--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
      <!--CSS Estilos-->
-    <link rel="stylesheet" href="/public/css/index.css">
+    <link rel="stylesheet" href="public/css/index.css">
+    <link rel="stylesheet" href="public/css/services.css">
 </head>
 <body>
     <header class="inicio">
@@ -28,21 +29,60 @@
         </div>
     </header>
     <main>
-    <!--Servicios-->
-    <div>
-        <div class="img-box">
-            <img src="/public/img/deco-img.jpg" alt="">
+    <!-- servicios -->
+    <section class="work" id="work">
+        <div class="title">
+            <h2>Servicios</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. In aliquid reprehenderit maiores, exercitationem doloremque adipisci veniam similique velit obcaecati.
+            </p>
         </div>
-        <div class="img-box">
-            <img src="/public/img/ind-img.jpg" alt="">
+        <div class="content">
+            <div class="workBx">
+                <div class="imgBx">
+                    <img src="/Manasi-vinilos/public/img/deco-img.jpg" alt="">
+                </div>
+                <div class="textBx">
+                    <i class="fas fa-pen"></i>
+                    <div class="espaciador" style="height: 10px;"></div>
+                    <a href="#"><h3>Deco</h3></a>
+                </div>
+            </div>
+
+            <div class="workBx">
+                <div class="imgBx">
+                    <img src="/Manasi-vinilos/public/img/ind-img.jpg" alt="">
+                </div>
+                <div class="textBx">
+                    <i class="fas fa-tshirt"></i>
+                    <div class="espaciador" style="height: 10px;"></div>
+                    <a href="#"><h3>INDUMENTARIA</h3></a>
+                </div>
+            </div>
+
+            <div class="workBx">
+                <div class="imgBx">
+                    <img src="/Manasi-vinilos/public/img/calcomanias-img.jpg" alt="">
+                </div>
+                <div class="textBx">
+                    <i class="fas fa-icons"></i>
+                    <div class="espaciador" style="height: 10px;"></div>
+                    <a href="#"><h3>Stickers & volantes</h3></a>
+                </div>
+            </div>
+
+            <div class="workBx">
+                <div class="imgBx">
+                    <img src="/Manasi-vinilos/public/img/personalizado-img.jpg" alt="">
+                </div>
+                <div class="textBx">
+                    <i class="fas fa-box-open"></i>
+                    <div class="espaciador" style="height: 10px;"></div>
+                    <a href="#"><h3>Personalizados (regalos)</h3></a>
+                </div>
+            </div>
         </div>
-        <div class="img-box">
-            <img src="/public/img/calcomanias-img.jpg" alt="">
-        </div>
-        <div class="img-box">
-            <img src="/public/img/personalizado-img.jpg" alt="">
-        </div>
-    </div>
+    </section>
     <!--Formulario-->
     <div></div>
     </main>
