--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
      <!--CSS Estilos-->
     <link rel="stylesheet" href="public/css/index.css">
     <link rel="stylesheet" href="public/css/services.css">
+    <link rel="stylesheet" href="public/css/footer.css">
 </head>
 <body>
     <header class="inicio">
@@ -40,7 +41,7 @@
         <div class="content">
             <div class="workBx">
                 <div class="imgBx">
-                    <img src="/Manasi-vinilos/public/img/deco-img.jpg" alt="">
+                    <img src="public/img/deco-img.jpg" alt="">
                 </div>
                 <div class="textBx">
                     <i class="fas fa-pen"></i>
@@ -51,7 +52,7 @@
 
             <div class="workBx">
                 <div class="imgBx">
-                    <img src="/Manasi-vinilos/public/img/ind-img.jpg" alt="">
+                    <img src="public/img/ind-img.jpg" alt="">
                 </div>
                 <div class="textBx">
                     <i class="fas fa-tshirt"></i>
@@ -62,7 +63,7 @@
 
             <div class="workBx">
                 <div class="imgBx">
-                    <img src="/Manasi-vinilos/public/img/calcomanias-img.jpg" alt="">
+                    <img src="public/img/calcomanias-img.jpg" alt="">
                 </div>
                 <div class="textBx">
                     <i class="fas fa-icons"></i>
@@ -73,7 +74,7 @@
 
             <div class="workBx">
                 <div class="imgBx">
-                    <img src="/Manasi-vinilos/public/img/personalizado-img.jpg" alt="">
+                    <img src="public/img/personalizado-img.jpg" alt="">
                 </div>
                 <div class="textBx">
                     <i class="fas fa-box-open"></i>
@@ -86,6 +87,25 @@
     <!--Formulario-->
     <div></div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="pie">
+            <img class = "logo" src="public/img/logo-footer.jpg" alt="">
+            <div class="social-icons-container">
+                <a href="#" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-facebook-square"></i></a>
+                <a href="#" class="social-icon"><i class="fas fa-store"></i></a>
+            </div>
+            <ul class="footer-menu-container">
+                <li class="menu-item">Legal</li>
+                <li class="menu-item">Cookies</li>
+                <li class="menu-item">Contacto</li>
+                <li class="menu-item">privacidad</li>
+                <li class="menu-item">Refounds</li>
+            </ul>
+            <span class="copyright">&copy;2022, Manasi Vinilos. Todos los derechos reservados.</span>
+        
+        </div>
+    </footer>
 </body>
 </html>
