--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
      <!--CSS Estilos-->
     <link rel="stylesheet" href="public/css/index.css">
     <link rel="stylesheet" href="public/css/services.css">
-    <link rel="stylesheet" href="public/css/footer.css">
+    <link rel="stylesheet" href="public/css/footer_dos.css">
+
 </head>
 <body>
     <header class="inicio">
@@ -30,6 +31,14 @@
         </div>
     </header>
     <main>
+
+    <!-- icono-flotante-wpp -->
+    <div class="wpp-fixed">
+        <a href="#">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+
     <!-- servicios -->
     <section class="work" id="work">
         <div class="title">
@@ -87,7 +96,7 @@
     <!--Formulario-->
     <div></div>
     </main>
-    <footer>
+    <!-- <footer>
         <div class="pie">
             <img class = "logo" src="public/img/logo-footer.jpg" alt="">
             <div class="social-icons-container">
@@ -106,6 +115,39 @@
             <span class="copyright">&copy;2022, Manasi Vinilos. Todos los derechos reservados.</span>
         
         </div>
+    </footer> -->
+    <footer>
+        <div class="group-one">
+            <div class="box">
+                <figure>
+                    <img src="public/img/logo-footer.jpg" alt="logo-manasi">
+                </figure>
+            </div>
+            <div class="box">
+                <h2>CONTACTO</h2>
+                <p>
+                    <i class="fas fa-map-marker-alt"></i>
+                    Av. Rivadavia 0000, Campana, Buenos Aires
+                </p>
+                <p>
+                    <i class="fas fa-phone"></i>
+                    0000-000-000
+                </p>
+                <p>
+                    <i class="fas fa-envelope-open-text"></i>
+                    manasi.vinilos@gmail.com
+                </p>
+            </div>
+            <div class="box">
+                <h2>REDES SOCIALES</h2>
+                <div class="social-midia">
+                    <a href="#" class="link"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="link-escondido"><i class="fab fa-whatsapp"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="span">&copy;2022, Manasi Vinilos. Todos los derechos reservados.</div>
     </footer>
 </body>
 </html>
