navbar-product-section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="navbar">
             <ul>
                 <li><a href="#home">Inicio</a></li>
-                <li><a href="#productos">Trabajos</a></li>
+                <li><a href="/paginas/products.html">Trabajos</a></li>
                 <li><a href="#work">Servicio</a></li>
                 <li><a href="#footer-contact">Contacto</a></li>
             </ul>
