--- a/paginas/products.html
+++ b/paginas/products.html
@@ -23,14 +23,19 @@
 <body>
     <!-- <div class="space-white" style="height: 60px; width: 100%; color: transparent;"></div> -->
     <header class="header">
-        <a href="#" class="logo">Manasi Vinilos</a>
+        <a href="/index.html" class="logo">Manasi Vinilos</a>
         <div id="toggle"></div>
         <div id="navbar">
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
-                <li><a href="#productos">Trabajos</a></li>
-                <li><a href="#work">Servicio</a></li>
+                <li><a href="#productos">Stickers</a></li>
+                <li><a href="#work">Servicios</a></li>
                 <li><a href="#footer-contact">Contacto</a></li>
+                <li>
+                    <a href="#" class="link"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                </li>
             </ul>
         </div>
     </header>
@@ -147,6 +152,52 @@
                 </div>
             </div>
         </div>  
+
+        <div class="servicios">
+            <div class="servicios-title">
+                <h2>MAS STICKERS</h2>
+            </div>
+            <div class="servicios-wrapper">
+                <main class = "grid">
+                    <article>
+                        <img src="/public/img/1645054972888.png" alt="">
+                        <div class="text">
+                            <h3>GRYFFINDOR TEAM</h3>
+                            <p>$40,00</p>
+                            <div class="margen-interno"></div>
+                            <a href="#">Info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="/public/img/1645054122109.png" alt="">
+                        <div class="text">
+                            <h3>NIKE ZAPATILLAS</h3>
+                            <p>$40,00</p>
+                            <div class="margen-interno"></div>
+                            <a href="#">Info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="/public/img/1645054143683.png" alt="">
+                        <div class="text">
+                            <h3>VENTANA AVION</h3>
+                            <p>$40,00</p>
+                            <div class="margen-interno"></div>
+                            <a href="#">Info</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="/public/img/1645054923239.png" alt="">
+                        <div class="text">
+                            <h3>AVT MISS MINUTES</h3>
+                            <p>$40,00</p>
+                            <div class="margen-interno"></div>
+                            <a href="#">Info</a>
+                        </div>
+                    </article>    
+                </main>
+            </div>
+        </div>
     </main>
     <footer id="footer-contact">
         <div class="group-one" id="contacto-footer">
